crates/ruff_python_parser/tests/snapshots/simple_tokenizer__tokenize_eq.snap
---
source: crates/ruff_python_parser/tests/simple_tokenizer.rs
expression: test_case.tokens()
---
[
    SimpleToken {
        kind: EqEqual,
        range: 0..2,
    },
    SimpleToken {
        kind: Equals,
        range: 2..3,
    },
]
