crates/ruff_python_parser/tests/snapshots/simple_tokenizer__tokenize_parentheses.snap
---
source: crates/ruff_python_parser/tests/simple_tokenizer.rs
expression: test_case.tokens()
---
[
    SimpleToken {
        kind: LParen,
        range: 0..1,
    },
    SimpleToken {
        kind: LBracket,
        range: 1..2,
    },
    SimpleToken {
        kind: LBrace,
        range: 2..3,
    },
    SimpleToken {
        kind: RBrace,
        range: 3..4,
    },
    SimpleToken {
        kind: RBracket,
        range: 4..5,
    },
    SimpleToken {
        kind: RParen,
        range: 5..6,
    },
]
